# bowling_kata

./: .gitignore  CMakeLists.txt  README.md
src/: game.cpp  game.hpp  gameV2.cpp  gameV2.hpp
test/: CMakeLists.txt  gameTest.cpp  gameV2Test.cpp
